# GEMINI

./: .gitignore  CMakeLists.txt  README.md  TODO.md  gemini.f90  install_prereqs.sh  magcalc.f90  meson.build
.github/workflows/: ci_linux.yml
archive/: precipBCS_hardcode.f90
cmake/: compilers.cmake  io.cmake  mumps.cmake  mumps_external.cmake  scalapack.cmake  test2d.cmake  test2d_glow.cmake  test3d.cmake  test3d_glow.cmake  utils.cmake
cmake/Modules/: FindSCALAPACK.cmake
initialize/2Dtest_eq/: model_setup.m  model_setup_2Dtest_eq.m
io/: CMakeLists.txt  expanduser.f90  input.f90  io.F90  io.f90  io_dummy.f90  io_hdf5.f90  io_posix.f90  io_windows.f90  makedirs.f90  meson.build  readHDF5.f90  readraw.f90  writeHDF5.f90  writeraw.f90
ionization/boundary_conditions/: precipBCs_mod.f90
meson/: meson.build
neutral/: neutral.f90
numerical/: CMakeLists.txt
numerical/diffusion/: CMakeLists.txt  PDEparabolic.f90  diffusion.F90  meson.build  (+4 more)
numerical/potential/: CMakeLists.txt  PDEelliptic.F90  meson.build  potential_comm_mumps.f90  potential_mumps.F90  test_potential.make  test_potential2D.f90  test_potential2D.m  test_potential3D.f90
script_utils/: h5save.m  h5w.m  readICs.py  readconfig.m  resolvepath.m  writeHDF5.m  writeIChdf5.m  writeICraw.m  writegridhdf5.m  writegridraw.m  writeraw.m
setup/: Efield_BCs.m  Efield_BCs_2d.m  chapmana.m  eq2dist.m  eqICs3D.m  grid_examples.m  particles_BCs.m
subprojects/: mumps.wrap
tests/: CMakeLists.txt  compare_all.m
vis/: loadframe.m  loadframe3Dcurvavg.m  loadframe_HDF5_3Dcurvavg.m  plotall.m  plotframe.m
(+7 files in other folders)
